--- a/src/main/webapp/99e28~ue.html
+++ b/src/main/webapp/99e28~ue.html
@@ -71,7 +71,7 @@
 						<!-- name-and-slogan -->
 						<div class="site-name-and-slogan smooth-scroll">
 							<div class="site-name">
-								<a href="#banner">Capability Center</a>
+								<a href="#banner">Capability center</a>
 							</div>
 							<div class="site-slogan">Make employee's ability and life better</div>
 						</div>
@@ -130,6 +130,7 @@
 
 					</div>
 					<!-- header-right end -->
+
 				</div>
 			</div>
 		</div>
@@ -146,7 +147,7 @@
 					<div class="col-md-8 col-md-offset-2 object-non-visible"
 						data-animation-effect="fadeIn">
 						<h1 class="text-center">
-							<span>Capability Center</span>-Pre-sales
+							<span>Capability Canter</span>Pre-sales
 						</h1>
 						<p class="lead">Analyze, abstract, tease out and subside the existing capabilities of organization technology delivery, organization management, technical construction and also build new capabilities. Meanwhile, we make them structured and standardized to build a mature pre-sales capability sequentially.</p>
 					</div>
@@ -155,6 +156,9 @@
 		</div>
 	</div>
 	<!-- banner end -->
+
+
+
 	<div class="isotope-container row grid-space-20">
 		<div class="modal fade" id="project-1" tabindex="-1" role="dialog"
 			aria-labelledby="project-1-label" aria-hidden="true">
@@ -272,7 +276,7 @@
 							<div class="col-md-4">
 								<p>Strategic decoding - based on the company strategy, make the right things.</p>
 								<p>Unified core values - force a hole - change employee's ability and life.</p>
-								<p>Vision interpretation - we know how to achieve the goal clearly.</p>
+								<p>Vision interpretation - we know how to achieve the goal clearly.标</p>
 								<p>RoadMap- Rome was not built in a day, do the right thing at the right time.</p>
 								<p>System of holding a host-walking on the right path.</p>
 								<p>Standard of holding a host-multiple dimensions、individuation layout designing.</p>
