--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 		<meta charset="utf-8">
-		<title>能力中心</title>
+		<title>Capability Center-activity</title>
 		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -31,6 +31,11 @@
 
 		<!-- Custom css --> 
 		<link href="css/custom.css" rel="stylesheet">
+		<style>
+			a.btn.btn-default.btn-block {
+    overflow: hidden;
+}
+		</style>
 	</head>
 
 	<body class="no-trans">
@@ -56,8 +61,8 @@
 
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
-								<div class="site-name"><a href="#banner">能力与创新中心</a></div>
-								<div class="site-slogan">改善员工的能力和生活 </div>
+								<div class="site-name"><a href="#banner">Capability Center</a></div>
+								<div class="site-slogan">Make employee's ability and life better </div>
 							</div>
 
 						</div>
@@ -88,20 +93,17 @@
 												<span class="icon-bar"></span>
 											</button>
 										</div>
-
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">主页</a></li>
-												<li class="active"><a href="#new">最新活动</a></li>
-												<li><a href="training.html">最新培训</a></li>
+												<li><a href="index.html">Home</a></li>
+												<li class="active"><a href="#new">Latest Activities</a></li>
+												<li><a href="training.html">Latest Training</a></li>
 											</ul>
 										</div>
-
 									</div>
 								</nav>
 								<!-- navbar end -->
-
 							</div>
 							<!-- main-navigation end -->
 
@@ -122,8 +124,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
-							<h1 class="text-center"><span>能力中心</span>我们的活动</h1>
-							<p class="lead">能力中心通过组织线上线下各种活动，促进了各个交付部的横向沟通，增进了部门同事间的交流，更好地构建了部门文化。</p>
+							<h1 class="text-center"><span>Capability Center</span>-Our activities</h1>
+							<p class="lead">Through organizing online and offline activities, the capability center facilitates horizontal communication between the delivery departments, improves communication among colleagues in the department and builds the departmental culture better.</p>
 						</div>
 					</div>
 				</div>
@@ -149,9 +151,9 @@
 		<!-- ================ -->
 		<div class="section" id="new">
 			<div class="container">
-				<h1 class="text-center title" id="portfolio">最新活动</h1>
+				<h1 class="text-center title" id="portfolio">Latest activities</h1>
 				<div class="separator"></div>
-				<p class="lead text-center">欢迎大家参加各项活动</p>
+				<p class="lead text-center">Welcome to all activities</p>
 				<br>
 				<div class="row object-non-visible" data-animation-effect="fadeIn">
 					<div class="col-md-12">
@@ -166,7 +168,6 @@
 							</ul>
 						</div>
 						<!-- isotope filters end -->
-
 						<!-- portfolio items start -->
 						<div class="isotope-container row grid-space-20">
 
@@ -179,7 +180,7 @@
 											<span>Knownledge Building</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-10">聚慧大讲堂开幕式</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-10">The opening ceremony of the grand hall</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-10" tabindex="-1" role="dialog" aria-labelledby="project-10-label" aria-hidden="true">
@@ -187,7 +188,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-10-label">集百家之长，成一家之言，寻智慧之巅</h4>
+												<h4 class="modal-title" id="project-10-label">To close collection of hundreds of advantages, a family of words, seek the top of wisdom.</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -220,10 +221,10 @@
 										<img src="images/6.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-12">
 											<i class="fa fa-search-plus"></i>
-											<span>敏捷赋能</span>
+											<span>Agile training</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-12">敏捷培训</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-12">Agile training</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-12" tabindex="-1" role="dialog" aria-labelledby="project-12-label" aria-hidden="true">
@@ -231,7 +232,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-12-label">敏捷经验交流</h4>
+												<h4 class="modal-title" id="project-12-label">Agile experience exchange</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -264,7 +265,7 @@
 											<span>English Corner</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-3">英语角</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-3">English corner</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-3" tabindex="-1" role="dialog" aria-labelledby="project-3-label" aria-hidden="true">
@@ -278,8 +279,7 @@
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>Have you ever felt it’s difficult to talk with native speakers proactively? Do you want to communicate with your colleagues or foreign customers in English without boundaries? Come to English corner and show yourself confidently!</p>
-														<p>Here provides you infinite opportunities to meet someone new and have a good learning experience.</p>
+														<p>Have you ever felt it’s difficult to talk with native speakers proactively? Do you want to communicate with your colleagues or foreign customers in English without boundaries? Come to English corner and show yourself confidently! Here provides you infinite opportunities to meet someone new and have a good learning experience.</p>
 														<p>你有没有觉得在与外国人主动交谈方面存在困难？你想与你的同事或外国客户无障碍沟通吗？来英语角吧，自信地展现自己，给自己一个交友、学习的机会。</p>
 													</div>
 													<div class="col-md-6">
@@ -295,17 +295,16 @@
 								</div>
 								<!-- Modal end -->
 							</div>
-
 							<div class="col-sm-6 col-md-3 isotope-item app-development">
 								<div class="image-box">
 									<div class="overlay-container">
 										<img src="images/scrummaster.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-4">
 											<i class="fa fa-search-plus"></i>
-											<span>敏捷赋能</span>
+											<span>Agile Training</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">敏捷培训</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">Agile training</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-4" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
@@ -345,7 +344,7 @@
 											<span>Internet Banking Training</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-5">国际化赋能</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-5">Internationalization assignment</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-5" tabindex="-1" role="dialog" aria-labelledby="project-5-label" aria-hidden="true">
@@ -382,10 +381,10 @@
 										<img src="images/pbox.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-6">
 											<i class="fa fa-search-plus"></i>
-											<span>美好时光</span>
+											<span>Beautiful Moments</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-6">部门茶话会</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-6">5、Tea party of the department</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-6" tabindex="-1" role="dialog" aria-labelledby="project-6-label" aria-hidden="true">
@@ -393,7 +392,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-6-label">"Pbox"启动会</h4>
+												<h4 class="modal-title" id="project-6-label">P-box kick-off meeting</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -425,7 +424,7 @@
 											<span>Site Building</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-7">技术分享</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-7">Technology sharing</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-7" tabindex="-1" role="dialog" aria-labelledby="project-7-label" aria-hidden="true">
@@ -433,7 +432,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-7-label">CI集成</h4>
+												<h4 class="modal-title" id="project-7-label"> CI integration</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -465,7 +464,7 @@
 											<span>English Orientation</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-8">新员工培训</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-8">New employees’ training</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-8" tabindex="-1" role="dialog" aria-labelledby="project-8-label" aria-hidden="true">
@@ -473,7 +472,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-8-label">新员工培训</h4>
+												<h4 class="modal-title" id="project-8-label">New employees’ training</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -505,7 +504,7 @@
 											<span>Toastmaster</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-9">演讲俱乐部</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-9">Speech club</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-9" tabindex="-1" role="dialog" aria-labelledby="project-9-label" aria-hidden="true">
@@ -542,10 +541,10 @@
 										<img src="images/9.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-1">
 											<i class="fa fa-search-plus"></i>
-											<span>袁家村</span>
+											<span>Yuan Village</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">集体出游</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">Group travel</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-1" tabindex="-1" role="dialog" aria-labelledby="project-1-label" aria-hidden="true">
@@ -553,7 +552,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-1-label">袁家村一日游</h4>
+												<h4 class="modal-title" id="project-1-label">A day trip in Yuan village</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -561,6 +560,7 @@
 													<div class="col-md-6">
 														<p>春暖花开，正是出游的好时节！为了丰富员工的业余文化生活，增进员工之间的相互交流与沟通，激发工作热情，增强团队意识，部门组织员工周末到袁家村进行了放松。</p>
 														<p>本次出游活动非常成功，大家都表示在紧张的工作之余，出游活动陶冶了身心，锻炼了身体，增加了交流，非常开心。相信经过这次活动，大家将会以更加饱满的热情投入到工作中去！</p>
+														<p>Spring flowers bloom, it is the good time to travel! In order to enrich the part-time cultural life of employees, enhance the communication among employees, arouse the enthusiasm of the work and enhance the team consciousness, the department organized the employees to relax in Yuan village on the weekend.</p>
 														<p>The outing activity was very successful, everybody said in the intense work, travel activities cultivate the body and mind, exercise the body, increase the communication, very happy.Believe that after this activity, we will be in a more full enthusiasm into work!.</p>
 													</div>
 													<div class="col-md-6">
@@ -576,17 +576,16 @@
 								</div>
 								<!-- Modal end -->
 							</div>
-
 							<div class="col-sm-6 col-md-3 isotope-item app-development">
 								<div class="image-box">
 									<div class="overlay-container">
 										<img src="images/10.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-11">
 											<i class="fa fa-search-plus"></i>
-											<span>敏捷赋能</span>
+											<span>Agile Training</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-11">敏捷培训</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-11">Agile training</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-11" tabindex="-1" role="dialog" aria-labelledby="project-11-label" aria-hidden="true">
@@ -594,7 +593,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-11-label">敏捷经验交流</h4>
+												<h4 class="modal-title" id="project-11-label">Agile experience exchange</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
@@ -626,10 +625,10 @@
 										<img src="images/sanba.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-2">
 											<i class="fa fa-search-plus"></i>
-											<span>女王节快乐</span>
+											<span>Happy Women's Day</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">三八活动</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">Activities in Women’s Day</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-2" tabindex="-1" role="dialog" aria-labelledby="project-2-label" aria-hidden="true">
@@ -637,7 +636,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-2-label">"三八"系列活动</h4>
+												<h4 class="modal-title" id="project-2-label">A series activities in Women’s Day.</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
