--- a/src/main/webapp/e62~ue.html
+++ b/src/main/webapp/e62~ue.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Capability Center-Business </title>
+		<title>能力中心-服务中心</title>
 		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -31,13 +31,6 @@
 
 		<!-- Custom css --> 
 		<link href="css/custom.css" rel="stylesheet">
-		<style>
-			.header-left.clearfix {
-    width: 300px;
-    margin-top: 12%;
-}
-			
-		</style>
 	</head>
 
 	<body class="no-trans">
@@ -59,13 +52,16 @@
 							<div class="logo smooth-scroll">
 								<a href="#banner"><img id="logo" src="images/logo.png" alt="Worthy"></a>
 							</div>
+
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
-								<div class="site-name"><a href="#banner">Capability Center</a></div>
-								<div class="site-slogan">Make employee's ability and life better  </div>
+								<div class="site-name"><a href="#banner">能力与创新中心</a></div>
+								<div class="site-slogan">改善员工的能力和生活 </div>
 							</div>
+
 						</div>
 						<!-- header-left end -->
+
 					</div>
 					<div class="col-md-9">
 
@@ -91,34 +87,40 @@
 												<span class="icon-bar"></span>
 											</button>
 										</div>
+
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">Home</a></li>
+												<li><a href="index.html">主页</a></li>
 												<li><a href="">|</a></li>
-												<li><a href="service1.html">Technology</a></li>
-												<li class="active"><a href="service2.html">Domain knowledge</a></li>
-												<li><a href="service3.html">Agile</a></li>
-												<li><a href="service4.html">Architecture</a></li>
-												<li><a href="">Innovation</a></li>
-												<li><a href="service6.html">Managemant</a></li>
-												<li><a href="service7.html">Pre-sales</a></li>
-												<li><a href="service8.html">Internationalization</a></li>
-												<li><a href="service9.html">Quality</a></li>
+												<li><a href="service1.html">技术</a></li>
+												<li class="active"><a href="service2.html">业务</a></li>
+												<li><a href="service3.html">敏捷</a></li>
+												<li><a href="service4.html">架构</a></li>
+												<li><a href="">创新</a></li>
+												<li><a href="service6.html">管理</a></li>
+												<li><a href="service7.html">售前</a></li>
+												<li><a href="service8.html">国际化</a></li>
+												<li><a href="service9.html">质量</a></li>
 											</ul>
 										</div>
+
 									</div>
 								</nav>
 								<!-- navbar end -->
+
 							</div>
 							<!-- main-navigation end -->
+
 						</div>
 						<!-- header-right end -->
+
 					</div>
 				</div>
 			</div>
 		</header>
 		<!-- header end -->
+
 		<!-- banner start -->
 		<!-- ================ -->
 		<div id="banner" class="banner">
@@ -127,8 +129,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
-							<h1 class="text-center"><span>Capability Center</span>-Domain knowledge</h1>
-							<p class="lead">Provide tools and methodology guidance for technical precipitation for each delivery department, and provide technical training resources for each delivery department to achieve the goal of rapid replication of technical capabilities with shared resources.</p>
+							<h1 class="text-center"><span>能力中心</span>业务</h1>
+							<p class="lead">为各个交付部进行业务沉淀提供工具和方法论指导，拉通各个交付部的业务培训资源，以达到共享资源，快速复制业务能力的目的。</p>
 						</div>
 					</div>
 				</div>
@@ -140,9 +142,9 @@
 				<div class="row">
 					<div class="section" id="new">
 						<div class="container">
-							<h1 class="text-center title" id="portfolio">Business Service Scene </h1>
+							<h1 class="text-center title" id="portfolio">业务服务场景</h1>
 							<div class="separator"></div>
-							<p class="lead text-center">Welcome to learn more about banking business.</p>
+							<p class="lead text-center">欢迎大家了解更多的银行业务。</p>
 							<div class="row object-non-visible animated object-visible fadeIn" data-animation-effect="fadeIn">
 								<div class="col-md-12">
 									<!-- isotope filters start -->
@@ -157,7 +159,7 @@
 														<i class="fa fa-search-plus"></i>
 													</a>
 												</div>
-												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">Retail Banking</a>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">零售银行</a>
 											</div>
 											<!-- Modal -->
 											<!-- Modal end -->
@@ -170,7 +172,7 @@
 														<i class="fa fa-search-plus"></i>
 													</a>
 												</div>
-												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">Commercial Banking</a>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">商业银行</a>
 											</div>
 											<!-- Modal -->
 											<!-- Modal end -->
@@ -183,7 +185,7 @@
 														<i class="fa fa-search-plus"></i>
 													</a>
 												</div>
-												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-3">Private Banking</a>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-3">私人银行</a>
 											</div>
 											<!-- Modal -->
 											<!-- Modal end -->
@@ -196,7 +198,7 @@
 														<i class="fa fa-search-plus"></i>
 													</a>
 												</div>
-												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">Global investment bank</a>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">全球投资银行</a>
 											</div>
 											<!-- Modal -->
 											<!-- Modal end -->
@@ -215,16 +217,16 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">x</span><span class="sr-only">Close</span></button>
-						<h4 class="modal-title" id="project-1-label">Retail bank</h4>
+						<h4 class="modal-title" id="project-1-label">零售银行</h4>
 					</div>
 					<div class="modal-body">
-						<h3>Business scope</h3>
+						<h3>业务范围</h3>
 						<div class="row">
 							<div class="col-md-6">
-								<p>Retail banking is not a short name for a business, but a general term for many businesses. It has a wide range of business areas, either traditional banking or new business.It can be either an asset business, a liability business, a middle business, an online banking business, and so on.</p>
-								<p>Liabilities: current deposit, time deposit, savings account, credit card deposit, financial bonds, large negotiable certificates of deposit.</P>
-								<p>Asset business: consumer credit (including car loans, housing loans, consumer durable loans, etc.), credit card financing or overdraft, etc.</p>
-								<p>Intermediary business: personal exchange settlement, personal trust, personal lease, personal safekeeping, personal note collection, agent, pay personal consulting and financing business, personal foreign exchange trading and foreign currency exchange business, etc. </p>
+								<p>零售银行业务不是某一项业务的简称，而是许多业务的总称，它有着广泛的业务领域，既可以是传统银行业务，也可以是新业务；既可以是资产业务，也可以是负债业务、中间业务、网上银行业务等等。</p>
+								<p>负债业务：活期存款，定期存款，储蓄存款，信用卡存款，金融债券，大额可转让定期存单。</P>
+								<p>资产业务：消费者信贷(包括汽车贷款、住房贷款、耐用消费品贷款等)，信用卡融资或透支等。</p>
+								<p>中间业务：个人汇兑结算、个人信托、个人租赁、个人保管箱、个人票据托收、代理支付、个人咨询及理财业务、个人外汇买卖及外币兑换业务等 </p>
 							</div>
 							<div class="col-md-6">
 								<img src="business/Mortgage.jpg" alt="">
@@ -250,13 +252,13 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-						<h4 class="modal-title" id="project-2-label">Commercial Banks </h4>
+						<h4 class="modal-title" id="project-2-label">商业银行</h4>
 					</div>
 					<div class="modal-body">
-						<h3>Business Scope </h3>
+						<h3>业务范围</h3>
 						<div class="row">
 							<div class="col-md-8">
-								<p>Commercial Banks is to distinguish between central Banks and investment Banks, is a for-profit, raise funds in a variety of financial liabilities, a variety of financial assets as the object of management, has the credit creation function of financial institutions Initially using the concept of commercial Banks, because this kind of Banks in the early stage of development, are only short-term lending business loan time limit is generally not more than a year, lending object is commonly merchants and import and export traders People will be the main absorption of short-term deposits, issue short-term commercial loans as the basic business bank, known as the commercial bank</p>
+								<p>商业银行的概念是区分于中央银行和投资银行的，是一个以营利为目的，以多种金融负债筹集资金，多种金融资产为经营对象，具有信用创造功能的金融机构。最初使用“商业银行”这个概念，是因为这类银行在发展初期，只承做“商业”短期放贷业务。放款期限一般不超过一年，放款对象一般为商人和进出口贸易商。人们将这种主要吸收短期存款，发放短期商业贷款为基本业务的银行，称为商业银行。</p>
 								<p></p>
 							</div>
 							<div class="col-md-4">
@@ -275,13 +277,13 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-						<h4 class="modal-title" id="project-3-label">Private Banks</h4>
+						<h4 class="modal-title" id="project-3-label">私人银行</h4>
 					</div>
 					<div class="modal-body">
-						<h3>Business scope</h3>
+						<h3>业务范围</h3>
 						<div class="row">
 							<div class="col-md-8">
-								<p>Private Banking is one of banking services, dedicated to wealthy people, provides rich personal property investment and management. To open this kind of Private banking services in larger international financial company or bank, It generally requires clients to have at least $1 million current assets. The main part of private banking services is asset management, investment planning, in accordance with the customer needs to provide special services. It can also be used by setting up offshore company family trusts and other ways for customers to save cost of tax and financial transactions. This kind service profit margin can be achieved by an annual rate of 15%, which is much higher than other financial services.</p>
+								<p>私人银行（PrivateBanking），是银行服务的一种，专门面向富有阶层，为富豪们提供个人财产投资与管理，一般需要拥有至少100万美元以上的流动资产才可在较大型的国际金融公司或银行中申请开设此类服务。私人银行服务最主要的是资产管理，规划投资，根据客户需要提供特殊服务，也可通过设立离岸公司、家族信托基金等方式为顾客节省税务和金融交易成本。该种服务的年均利润率可达到15%，远高于其他金融服务</p>
 							</div>
 							<div class="col-md-4">
 								<img src="business/GPB.jpg" alt="">
@@ -299,13 +301,13 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-						<h4 class="modal-title" id="project-4-label">Global investment bank</h4>
+						<h4 class="modal-title" id="project-4-label">全球投资银行</h4>
 					</div>
 					<div class="modal-body">
-						<h3>Business scope</h3>
+						<h3>业务范围</h3>
 						<div class="row">
 							<div class="col-md-8">
-								Investment bank is a non-bank financial institution, the main financial intermediation in the capital market, the most typical investment institution, which mainly engaged in securities issuance, underwriting, trading, enterprises restructuring, merger and acquisition, risk investment and project financing business. It is generally believed that an investment bank is a kind of financial institution where provide the intermediary services such as issue bonds and stocks, and raise long-term capital in the capital market for enterprises, mainly engaged in securities underwriting, corporate merger & acquisition and assets reorganization of corporate finance, and fund management business, etc. Its basic characteristic is to integrate capital markets business. The securities investment analysis methods mainly include the following three types: basic analysis, technical analysis and evolutional analysis. The basic analysis is mainly used in the choice of investment subject matter, technical analysis and evolutional analysis are mainly used in the specific investment operation on the judgment of time and space, as an important supplement to improve effectiveness and reliability of investment analysis .
+								投资银行( investment banking,corporate finance）是主要从事证券发行、承销、交易、企业重组、兼并与收购、投资分析、风险投资、项目融资等业务的非银行金融机构，是资本市场上的主要金融中介。是最典型的投资性金融机构，一般认为，投资银行是在资本市场上为企业发行债券、股票，筹集长期资金提供中介服务的金融机构，主要从事证券承销、公司购并与资产重组、公司理财、基金管理等业务。其基本特征是综合经营资本市场业务。证券投资的分析方法主要有如下三种：基本分析、技术分析、演化分析，其中基本分析主要应用于投资标的物的选择上，技术分析和演化分析则主要应用于具体投资操作的时间和空间判断上，作为提高投资分析有效性和可靠性的重要补充。
 
 							</div>
 							<div class="col-md-4">
@@ -321,7 +323,7 @@
 		</div>
 		<div class=" " id="trainingService1">
 			<div class="container">
-				<h1 class="text-center title" >Business Service Category</h1>
+				<h1 class="text-center title" >业务服务目录</h1>
 				<div class="separator"></div>
 					<div class="col-md-12">
 						<div class="panel-group" id="trainingAccordion" role="tablist" aria-multiselectable="true">
@@ -329,17 +331,17 @@
 								<div class="panel-heading" role="tab" id="trainingHeading1">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1" class="collapsed">
-											Retail Banking
+											零售银行
 										</a>
 									</h4>
 								</div>
 								<div id="trainingCollapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading1">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. Mortgage business</a>
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%9E%B6%E6%9E%84%E6%B8%A0%E9%81%93:1.%E6%B8%A0%E9%81%93:%E5%BE%AE%E4%BF%A1%E9%93%B6%E8%A1%8C:%E9%A6%96%E9%A1%B5" target="_blank">2. Wechat Banking </a>
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%9E%B6%E6%9E%84%E6%B8%A0%E9%81%93:1.%E6%B8%A0%E9%81%93:%E5%BE%AE%E4%BF%A1%E9%93%B6%E8%A1%8C:%E9%A6%96%E9%A1%B5" target="_blank">2. 微信银行 </a>
 										</div>
 										<div class="col-md-4">
 											<a href="" target="_blank">3. VTM</a>
@@ -351,20 +353,20 @@
 								<div class="panel-heading" role="tab" id="trainingHeading2">
 									<h4 class="panel-title">
 										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse2" aria-expanded="false" aria-controls="trainingCollapse2">
-											Commercial Banking
+											商业银行
 										</a>
 									</h4>
 								</div>
 								<div id="trainingCollapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading2">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="/" target="_blank">1. XXBusiness</a>
+											<a href="/" target="_blank">1. XX业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. XXBusiness </a>
+											<a href="" target="_blank">2. XX业务 </a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">3. XXBusiness</a>
+											<a href="" target="_blank">3. XX业务</a>
 										</div>
 									</div>
 								</div>
@@ -373,20 +375,20 @@
 								<div class="panel-heading" role="tab" id="trainingHeading3">
 									<h4 class="panel-title">
 										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse3" aria-expanded="false" aria-controls="trainingCollapse3">
-											Private Banking
+											私人银行
 										</a>
 									</h4>
 								</div>
 								<div id="trainingCollapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading3">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="/" target="_blank">1. XXBusiness</a>
+											<a href="/" target="_blank">1. XX业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. XXBusiness </a>
+											<a href="" target="_blank">2. XX业务 </a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">3. XXBusiness</a>
+											<a href="" target="_blank">3. XX业务</a>
 										</div>
 									</div>
 								</div>
@@ -395,20 +397,20 @@
 								<div class="panel-heading" role="tab" id="trainingHeading4">
 									<h4 class="panel-title">
 										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse4" aria-expanded="false" aria-controls="trainingCollapse4">
-											Global Investment Banking
+											全球投资银行
 										</a>
 									</h4>
 								</div>
 								<div id="trainingCollapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading4">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="/" target="_blank">1. XXBusiness</a>
+											<a href="/" target="_blank">1. XX业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. XXBusiness </a>
+											<a href="" target="_blank">2. XX业务 </a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">3. XXBusiness</a>
+											<a href="" target="_blank">3. XX业务</a>
 										</div>
 									</div>
 								</div>
