--- a/src/main/webapp/f258d~ue.html
+++ b/src/main/webapp/f258d~ue.html
@@ -33,16 +33,21 @@
 <!-- Custom css -->
 <link href="css/custom.css" rel="stylesheet">
 <style>
+	a.btn.btn-default.btn-block {overflow: hidden;}
+.site-name-and-slogan.smooth-scroll {
+    float: right;
+}
 .header-left.clearfix {
     width: 300px;
-    margin-top: 12%;
 } 
-a.btn.btn-default.btn-block {
-    overflow: hidden;
-}  
+.col-md-3 {
+    margin-top: 3%;
+}   
 </style>
+ 
 
 </head>
+
 <body class="no-trans">
 	<!-- scrollToTop -->
 	<!-- ================ -->
@@ -55,24 +60,30 @@ a.btn.btn-default.btn-block {
 	<header class="header fixed clearfix navbar navbar-fixed-top">
 		<div class="container">
 			<div class="row">
+
 				<div class="col-md-3">
+
 					<!-- header-left start -->
 					<!-- ================ -->
 					<div class="header-left clearfix">
+
 						<!-- logo -->
 						<div class="logo smooth-scroll">
 							<a href="#banner"><img id="logo" src="images/logo.png"
 								alt="Worthy"></a>
 						</div>
+
 						<!-- name-and-slogan -->
 						<div class="site-name-and-slogan smooth-scroll">
 							<div class="site-name">
-								<a href="#banner">Capability Center</a>
+								<a href="#banner">Capability center</a>
 							</div>
 							<div class="site-slogan">Make employee's ability and life better</div>
 						</div>
+
 					</div>
 					<!-- header-left end -->
+
 				</div>
 				<div class="col-md-9">
 
@@ -83,6 +94,7 @@ a.btn.btn-default.btn-block {
 						<!-- main-navigation start -->
 						<!-- ================ -->
 						<div class="main-navigation animated">
+
 							<!-- navbar start -->
 							<!-- ================ -->
 							<nav class="navbar navbar-default" role="navigation">
@@ -104,7 +116,7 @@ a.btn.btn-default.btn-block {
 										<ul class="nav navbar-nav navbar-right">
 											<li><a href="index.html">Home</a></li>
 											<li><a href="">|</a></li>
-											<li class="active"><a href="service1.html">Technology </a></li>
+											<li class="active"><a href="service1.html">technology </a></li>
 											<li><a href="service2.html">Domain knowledge</a></li>
 											<li><a href="service3.html">Agile</a></li>
 											<li><a href="service4.html">Architecture</a></li>
@@ -142,7 +154,7 @@ a.btn.btn-default.btn-block {
 					<div class="col-md-8 col-md-offset-2 object-non-visible"
 						data-animation-effect="fadeIn">
 						<h1 class="text-center">
-							<span>Capability Center</span>-Technology
+							<span>Capability center</span>technology
 						</h1>
 						<p class="lead">Provide tools and methodology guidance for technical precipitation for each delivery department, and provide technical training resources for each delivery department to achieve the goal of rapid replication of technical capabilities with shared resources</p>
 					</div>
